python-web-app/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: django-webapp
spec:
  type: NodePort
  selector:
    app: django-webapp
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
