python-web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: "/testpath"
        pathType: Prefix
        backend:
          service:
            name: django-webapp
            port:
              number: 80
